[metadata]
name = wecopttool
version = 1.0.0-beta.3
author = Sandia National Laboratories
description = WEC Design Optimization Toolbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SNL-WaterPower/WecOptTool
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.8, < 3.10
install_requires =
    numpy
    scipy
    matplotlib
    xarray
    autograd
    capytaine>=1.3
    netCDF4
    meshio
    gmsh
    pygmsh
    # meshmagick

[options.extras_require]
dev =
    pytest
    sphinx
    sphinxcontrib-bibtex
    sphinx_rtd_theme
    nbsphinx
    pandoc
    notebook
doc =
    sphinx
    sphinxcontrib-bibtex
    sphinx_rtd_theme
    nbsphinx
    pandoc
    notebook
