[metadata]
name = wecopttool
version = 1.0.1
author = Sandia National Laboratories
description = WEC Design Optimization Toolbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SNL-WaterPower/WecOptTool
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.8, < 3.10
install_requires =
    numpy~=1.21
    scipy~=1.7
    matplotlib~=3.5
    xarray~=0.21
    autograd~=1.3
    capytaine>=1.3
    pygmsh>=7.1.15
    netCDF4~=1.5
    meshio
    gmsh~=4.9
    jupyter~=1.0

[options.extras_require]
dev =
    pytest~=6.2
    sphinx~=4.4
    sphinxcontrib-bibtex~=2.4
    sphinx_rtd_theme~=1.0
    nbsphinx~=0.8
    pandoc~=2
    imageio~=2.14
doc =
    sphinx~=4.4
    sphinxcontrib-bibtex~=2.4
    sphinx_rtd_theme~=1.0
    nbsphinx~=0.8
    pandoc~=2
    imageio~=2.14
