[metadata]
name = wecopttool
version = 1.0.1
author = Sandia National Laboratories
description = WEC Design Optimization Toolbox
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/SNL-WaterPower/WecOptTool
license = GNU General Public License v3 (GPLv3)
license_file = LICENSE

classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >= 3.8, < 3.10
install_requires =
    numpy>=1.21,<2
    scipy>=1.7,<1.8
    matplotlib>=3.5,<3.6
    xarray>=0.21,<0.23
    autograd>=1.3,<1.4
    capytaine>=1.3,<1.4
    pygmsh>=7.1.15,<7.2
    netCDF4>=1.5
    meshio
    gmsh>=4.9,<5
    jupyter>=1.0

[options.extras_require]
dev =
    pytest>=6.2,<6.3
    sphinx>=4.4,<4.5
    sphinxcontrib-bibtex>=2.4,<2.5
    sphinx_rtd_theme>=1.0,<1.1
    nbsphinx>=0.8,<0.9
    pandoc>=2,<3
    imageio>=2.14,<2.15
doc =
    sphinx>=4.4,<4.5
    sphinxcontrib-bibtex>=2.4,<2.5
    sphinx_rtd_theme>=1.0,<1.1
    nbsphinx>=0.8,<0.9
    pandoc>=2,<3
    imageio>=2.14,<2.15
